--- a/TestProjectXamarin/TestProjectXamarin/Views/LoginPage.xaml
+++ b/TestProjectXamarin/TestProjectXamarin/Views/LoginPage.xaml
@@ -4,7 +4,8 @@
              x:Class="TestProjectXamarin.Views.LoginPage">
     <StackLayout x:Name="MasterLayout">
 
-        <StackLayout x:Name="LogoStack">
+        <StackLayout x:Name="LogoStack" VerticalOptions="FillAndExpand">
+            <Label x:Name="lbl_NoInternet" HorizontalTextAlignment="Center" TextColor="White" BackgroundColor="Red"/>
             <Image x:Name="LoginIcon" Source="LoginIcon.png" Margin="0,80,0,0" />
         </StackLayout>
     
